# simple_engine

./: .gitignore  CMakeLists.txt  README.md
include/common/: common_header.hpp  id.hpp  logger.hpp  primitive_type.hpp
include/core/: engine.hpp
include/graphics/: graphics.hpp
include/graphics/opengl/: graphics_opengl.hpp
include/platform/: window.hpp
include/utilities/: leak_tracker.hpp  logger.hpp  utilities.hpp
src/: main.cpp
src/graphics/opengl/: graphics_opengl.cpp  graphics_opengl_linux.cpp  graphics_opengl_win32.cpp
src/platform/linux/: window_linux.cpp
src/platform/win32/: window_win32.cpp
src/utilities/: leak_tracker.cpp
